fix: LoginForm gap

--- a/src/components/business/forms/LoginForm/LoginForm.module.css
+++ b/src/components/business/forms/LoginForm/LoginForm.module.css
@@ -2,7 +2,7 @@
   width: var(--size-240-450-inf);
   display: flex;
   flex-direction: column;
-  gap: var(--size-15-40-inf);
+  gap: var(--size-30-50-inf);
 }
 
 .title {
